# Articulated_autonomous_haptic_feedback_obstacle_sensing

./: .setup_assistant  CMakeLists.txt  README.md  README.md.md  package.xml
config/: .setup_assistant  assembly_updated.srdf  controllers.yaml  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
config/config/: assembly_updated.srdf  fake_controllers.yaml  gazebo_assembly_updated.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
config/launch/: default_warehouse_db.launch  demo.launch  gazebo.launch  move_group.launch  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml
include/: blocks_poses.h
launch/: chomp_planning_pipeline.launch.xml  display.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  ros_controllers.launch  setup_assistant.launch  simple_moveit_controller_manager.launch.xml
meshes/: base_link.STL  gripper_link.STL  holder_link_1.STL  holder_link_2.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
src/: blocks_poses_publisher.cpp  blocks_spawner.cpp  init_final_code.py  sample_move_robot.py  sensor_test.py  test_joints.py
urdf/: assembly_updated.csv  assembly_updated.urdf  conveyor_belt.urdf  cs_as_robot_3.rviz  gazebo_assembly_updated.urdf  red_box.urdf
