<package format="2">
  <name>assembly_updated</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for assembly_updated</p>
    <p>This package contains configuration data, 3D models and launch files
for assembly_updated robot</p>
  </description>
  <author>SaiBharadhwajMatha</author>
  <maintainer email="bharadhwajsaimatha@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend> 
  
  <export>
    <architecture_independent />
  </export>
</package>
